优化：UserService.findFistByWxOpenid 新增缓存的支持，使之更加高效。
优化：优化JPress后台登录的验证码位置，防止输入的时候验证码被盖住，用户体验不好的问题。
优化：TemplateControllerBase 的 doRender 方法修改为 protected。
优化：插件在启动的时候，也会自动启动插件所带的微信运营插件功能。
优化：JPressApplicationConfig 和 JPressConfig 合并，统一前缀为 JPress。
优化：在JPress指定 httpclient 版本，防止依赖的时候不同 sdk 的版本冲突问题。
优化：优化 WechatMsgNotifyController 代码，使之逻辑更加简单明了。
优化：优化 UserService，删除 saveAndGetId 方法。
修复：通过 jpress.sh 启动jpress，可能出现无法渲染验证码的问题。
修复：当用户取消关注的时候，会出现 renderError 的问题。
修复：修复 SmartField 中的 DatetimeRender 无法正确渲染空间的问题。
修复：后台选择微信公众号授权方式无法正确保存的问题。
修复：用户通过微信公众号扫描带参数二维码进入公众号时，无法触发关注公众号文字配置的问题。
修复：修复JPress插件在某些情况下无法加载指定的微信插件功能。
修复：当插件被卸载后，插件在用户中心创建的菜单无法被删除的问题。感谢 @朱哲
修复：用户角色当更新的时候，无法正确更新缓存的问题。
修复：当更新用户状态的时候，无法正确更新缓存的问题。


jpress v2.0:
新增：#articles() 等指令，在读取文章列表的时候增加文章作者的相关属性支持
新增：用户类 User.class 新增 `getOriginalAvatar()` 方法的支持，用于读取数据配置的头像信息
新增：用户类 User.class 新增 微信公众号 的创建源
优化：优化微信插件的执行逻辑，当有多个插件匹配相同的关键字或事件时，一个插件执行失败将由下个插件去执行。
优化：在docker环境下，当用户上传模板的时候，自动上传到docker的映射目录
优化：在JPress的微信后台配置默认的回复信息时，只对消息类型有用，对事件无效
优化：当用户通过扫码了带参数二维码时，没有ticket时，默认是关注事件
优化：升级 Jboot 到最新版本 2.0.9
修复：当文章标签有英语句号（.）时，前台无法访问该标签下的文章的问题



jpress v2.0-rc.9:
新增：微信公众号文章导入功能，支持公众号图片附件直接本地化
新增：后台登录新增需要输入验证码的功能，防止暴力密码猜解
新增：插件的安装和卸载、支持插件调用动态库 .dll 和 .so 文件，支持动态库的卸载功能
新增：插件支持 WEB-INF 目录，放在 WEB-INF 的内容禁止访问
新增：SmartField 新增对 datetimepicker 渲染的支持，方便对时间的选择
新增：后台 OptionController 新增直接删除某个key和更新某个key的方法
新增：#articlePage 指令新增 orderBy 参数的支持
优化：从 WordPress 导入的文章，会实时提交百度搜索引擎
优化：CheckedIfDirective 和 SelectedIfDirective 指令
优化：MaxLengthDirective 指令，当出现错误是给出错误行号，方便排查
优化：在某些情况下通过后台登录后，会显示404，需要刷新下才行的问题
优化：当在后台编辑模板文件，但是没有写入权限时，给出具体的错误信息
优化：Article表下的缩略图字段thumbnail长度调整为512
优化：升级 Jboot 到最新版本 v2.0.8
修复：AddonHandlerProcesser 对读取 html 拦截失效的问题
修复：JPressRenderFactory 在某些极端情况先会出现空指针的问题
修复：当附件在没有设置 suffix 字段时，无法正确识别文件类型的问题
修复：当在后台配置微信公众号信息，再次修改后由于缓存原因修改失效的问题
修复：在二级目录下，datepicker无法使用的问题



jpress v2.0-rc.8:
新增：新增插件代码生成直接生成后台UI的功能
新增：超级管理员可以在后台修改任何人的密码的功能，用于帮助用户人工的方式找回密码
新增：在ControllerBase里新增render404If方法，是代码更加简洁
优化：优化 ImageUtils 的部分代码